Removed unused classes and fixed some methods with new authentication