@@ -6,12 +6,11 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.stereotype.Service;
 
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 @Service
 public class UserDtoMapper implements Function<User, UserDto> {
     @Override
-    public UserDto apply(User user){
+    public UserDto apply(User user) {
         return new UserDto(
                 user.getId(),
                 user.getFirstName(),
@@ -20,7 +19,7 @@ public class UserDtoMapper implements Function<User, UserDto> {
                 user.getAuthorities()
                         .stream()
                         .map(GrantedAuthority::getAuthority)
-                        .collect(Collectors.toList()),
+                        .toList(),
                 user.getUsername()
         );
     }
